--- a/src/components/MailList/mailList.css
+++ b/src/components/MailList/mailList.css
@@ -1,8 +1,7 @@
 .mail {
-    width: 100%;
+    width: 1413px;
     margin-top: 50px;
-    background-color: #003580;
-    color: white;
+    background-color: white;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -14,16 +13,17 @@
     width: 300px;
     height: 30px;
     padding: 10px;
-    border: none;
+    border: rgb(186, 108, 231) 1px solid;
     margin-right: 10px;
     border-radius: 5px;
 }
 
 .mailInputContainer>button {
     height: 50px;
-    background-color: #0071c2;
+    width: 100px;
+    background-color: rgb(186, 108, 231);
     color: white;
-    font-weight: 500;
+    font-weight: bold;
     border: none;
     border-radius: 5px;
     cursor: pointer;
