--- a/src/components/featured/featured.css
+++ b/src/components/featured/featured.css
@@ -5,7 +5,7 @@
     justify-content: space-between;
     gap: 20px;
     z-index: 1;
-
+    margin-top: 20px;
 }
 
 .featuredItem{
@@ -21,11 +21,12 @@
 .featuredImg{
     width: 100%;
     object-fit: cover;
+    height: 100%;
 }
 
 .featuredTitles{
     position: absolute;
     bottom: 20px;
     left: 20px;
-
+    color: black;
 }
