--- a/src/components/propertyList/propertyList.css
+++ b/src/components/propertyList/propertyList.css
@@ -27,3 +27,24 @@
     font-size: 14px;
     font-weight: 300;
 }
+
+.p-2 {
+    padding: .5rem;
+}
+
+.bg-lightBlue {
+    --tw-bg-opacity: 1;
+    background-color: rgb(244 247 253 / var(--tw-bg-opacity));
+}
+
+.rounded-2xl {
+    border-radius: 1rem;
+}
+
+.cursor-pointer {
+    cursor: pointer;
+}
+
+.h-full {
+    height: 100%;
+}
