--- a/src/pages/home/home1.scss
+++ b/src/pages/home/home1.scss
@@ -11,12 +11,43 @@
     gap: 30px;
 }
 
+.homeContainer2{
+    background-color: rgb(186, 108, 231);
+    display: flex;
+        flex: 6;
+        margin-top: 50px;
+        flex-direction: column;
+        align-items: center;
+        gap: 30px;
+}
+
+.homeContainer3 {
+    background-color: rgb(186, 108, 231);
+    display: flex;
+    flex: 6;
+    margin-top: 50px;
+    flex-direction: column;
+    align-items: center;
+    gap: 30px;
+}
 .middle {
     align-items: center;
 }
 
+.widgetsA {
+    display: flex; //use to get horizontal given datas
+    padding: 20px;
+    gap: 20px; //get the space
+    width: 1024px;
+}
+
+.AAAA{
+    background-color: purple;
+}
 .homeTitle {
     display: flex;
     width: 1024px;
     font-size: 20px;
+    margin-top: 100px;
+    margin-bottom: -20px;
 }
