--- a/src/pages/hotel/hotel.css
+++ b/src/pages/hotel/hotel.css
@@ -5,6 +5,15 @@
     margin-top: 20px;
 }
 
+.hotelfooter{
+    background-color: rgb(186, 108, 231);
+    display: flex;
+    flex: 6;
+    margin-top: 50px;
+    flex-direction: column;
+    align-items: center;
+    gap: 30px;
+}
 .hotelWrapper {
     width: 100%;
     max-width: 1024px;
@@ -20,7 +29,7 @@
     right: 0;
     border: none;
     padding: 10px 20px;
-    background-color: #0071c2;
+    background-color: rgb(186, 108, 231);
     color: white;
     font-weight: bold;
     border-radius: 5px;
@@ -87,6 +96,7 @@
     display: flex;
     flex-direction: column;
     gap: 20px;
+    margin-top: -200px;
 }
 
 .hotelDetailsPrice>h1 {
@@ -105,7 +115,7 @@
 .hotelDetailsPrice>button {
     border: none;
     padding: 10px 20px;
-    background-color: #0071c2;
+    background-color: rgb(186, 108, 231);
     color: white;
     font-weight: bold;
     cursor: pointer;
