--- a/src/pages/newHotel/newHotel.scss
+++ b/src/pages/newHotel/newHotel.scss
@@ -12,6 +12,7 @@
             padding: 10px;
             margin: 20px;
             display: flex;
+            margin-left: 250px;
 
             h1 {
                 color: lightgray;
