--- a/src/pages/appointments/bookingSummary/bookingSummary.scss
+++ b/src/pages/appointments/bookingSummary/bookingSummary.scss
@@ -8,23 +8,34 @@
   display: flex;
   flex-direction: column;
 }
-.mainContent{
+.main{
   color: #000;
-  //font-family: Roboto;
   font-size: 25px;
   font-style: normal;
   font-weight: 500;
   line-height: 20px; /* 80% */
   padding-top: 10px;
   max-width: 1000px;
-  
+  margin: 0 20%;
 }
-.subContent{
+.sub{
   color: #000;
   font-size: 18px;
   font-style: normal;
   font-weight: 300;
   line-height: 20px; /* 111.111% */
   padding-top: 10px;
-  margin-bottom: 40px;
+  max-width: 1000px;
+}
+
+.content{
+  color: #000;
+
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 300;
+  line-height: 20px; /* 111.111% */
+  padding-top: 80px;
+  max-width: 1000px;
+
 }
