--- a/src/pages/appointments/appointments.scss
+++ b/src/pages/appointments/appointments.scss
@@ -17,7 +17,7 @@
   line-height: 20px; /* 80% */
   padding-top: 10px;
   max-width: 1000px;
-  margin: 0  20%;
+  margin: 6% 20%;
 }
 .subContent{
   color: #000;
