--- a/src/components/widgetLU/widgetLu.scss
+++ b/src/components/widgetLU/widgetLu.scss
@@ -3,50 +3,38 @@
     justify-content: space-between;
     flex: 1;     //use to divide similary given boxs  
     padding: 10px;
-    -webkit-box-shadow: 2px 4px 10px 1px rgba(0, 0, 0, 0.47);   //give the box boder useing Box-Shadow CSS Generator
-    box-shadow: 2px 4px 10px 1px rgba(201, 201, 201, 0.47);
+    // -webkit-box-shadow: 2px 4px 10px 1px rgba(0, 0, 0, 0.47);   //give the box boder useing Box-Shadow CSS Generator
+    // box-shadow: 2px 4px 10px 1px rgba(201, 201, 201, 0.47);
     border-radius: 10px;
-    height: 100px;  //give height
+    height: 140px;  //give height
+    background-color: #EEE7FF;
 
-    .leftLu, .rightLu{
+    .left, .right{
         display: flex;
         flex-direction: column;  //use to get vetical line given content
-        justify-content: space-between;
+        padding-top: 5px;
 
-        .titleLu{
-           font-weight: bold;
-           font-size: 14px;
-           color: rgb(160, 160, 160); 
+        .title{
+           font-weight: 500;
+           font-size: 20px;
+           color: rgb(0, 0, 0); 
+           padding-left: 5px;
+
         }
 
-        .counterLu{
-            font-size: 28px;
-            font-weight: 300;
-        }
-        .linkLu{
-            width: max-content;
-            font-size: 12px;
-            border-bottom: 1px solid gray;
-        }
-        .percentageLu{
-            display: flex;
-            align-items: center;
-            font-size: 14px;
+        .counter{
+            font-size: 50px;
+            font-weight: 600;
+            color: #855CDD;
+            padding-right: 10px;
 
-            &.positive {          //when change class name as positive it color change as a green
-                color: green;
-            }
-        
-            &.negative {
-                color: red;
-            }
         }
 
         .icon{
-            font-size: 18px;
+            font-size: 50px;
             padding: 5px;
+            padding-top: 12px;
             border-radius: 5px;
-            align-self: flex-end;  //use to align to end
         }
     }
 }
