--- a/src/pages/homeLU/homelu.scss
+++ b/src/pages/homeLU/homelu.scss
@@ -11,7 +11,7 @@
         display: flex;    //use to get horizontal given datas
         padding: 20px;
         gap: 20px;   //get the space
-        margin-top: 60px;
+        margin-top: 10px;
         z-index: 1;    //used to get the top of the page
     }
 
@@ -30,5 +30,32 @@
             color: gray;
             margin-bottom: 15px;
         }
+    }
+
+    .bodyContainerLu{
+        margin: 40px;
+        margin-top: 100px;
+    }
+
+    .mainTopic{
+        margin-left: 20px;
+        font-weight: 500;
+        font-size: 25px;
+    }
+
+    .subTopic{
+        margin-left: 20px;
+        font-size: 18px;
+        font-weight: lighter;
+
+
+    }
+
+    .purpleText{
+        color: #855CDD;
+    }
+
+    .hero_image{
+        width: 500px;
     }
 }
