changed css classnames

--- a/src/pages/notifications/notifications.scss
+++ b/src/pages/notifications/notifications.scss
@@ -1,9 +1,9 @@
-.appointments {
+.notifications {
     display: flex;
     height: 100vh;
   }
   
-  .appointmentsContainer {
+  .notificationsContainer {
     display: flex;
     flex: 8;
     flex-direction: column;
