Doctor home page

--- a/src/components/navbarDoc/navbarDoc.scss
+++ b/src/components/navbarDoc/navbarDoc.scss
@@ -16,7 +16,7 @@
     display: flex; //use get vertical bar
     padding: 50px;
     align-items: center;
-    justify-content: space-between;    //used to get space between items and search class.
+    justify-content: space-between;    //used to get space between items and search class
 
     .searchDoc{
       display: flex;
