--- a/src/pages/Doctor/home/homeDoc.scss
+++ b/src/pages/Doctor/home/homeDoc.scss
@@ -1,7 +1,7 @@
-.homeDoc{
+.sideDoc{
   display: flex;    //home class is sidebar
 
-  .homeContainer2Doc{ //homeContainer class is navbar
+  .navDoc{ //homeContainer class is navbar
 
     flex: 2;     //used to divide both sidebar and navbar
     margin-left: 250px;    //used to get the space between sidebar and navbar
@@ -34,18 +34,18 @@
     }
   }
 
-  .bodyContainerDoc{
+  .bodyContainerDocHome{
     margin: 40px;
     margin-top: 100px;
   }
 
-  .mainTopicDoc{
+  .mainTopicDocHome{
     margin-left: 20px;
     font-weight: 500;
     font-size: 25px;
   }
 
-  .subTopicDoc{
+  .subTopicDocHome{
     margin-left: 20px;
     font-size: 18px;
     font-weight: lighter;
