--- a/src/pages/homeLU/homelu.scss
+++ b/src/pages/homeLU/homelu.scss
@@ -1,3 +1,7 @@
+@tailwind components;
+@tailwind utilities;
+
+
 .homelu{
     display: flex;    //home class is sidebar 
 
@@ -57,5 +61,11 @@
 
     .hero_image{
         width: 500px;
+
+        img {
+                height: 400px; // Apply height to the img tag
+                object-fit: cover; // Ensures the image covers the specified height while maintaining aspect ratio
+            }
     }
 }
+
