--- a/src/pages/cura/chatbotthird/chatbotthird.scss
+++ b/src/pages/cura/chatbotthird/chatbotthird.scss
@@ -1,3 +1,15 @@
+
+.chatbot {
+  display: flex;
+  height: 100vh;
+}
+
+.chatbotContainer {
+  display: flex;
+  flex: 8;
+  flex-direction: column;
+}
+
 .background-image {
     position: absolute;
     top: 0;
@@ -8,38 +20,51 @@
   }
 
 .text-containerth {
-    position: absolute;
-    top: 225px; 
-    right: 595px; 
-    width: auto; 
-    font-size: 40px;
-    color: #5F2BCF;
-    line-height: 1.0;
+    //position: absolute;
+    margin: 15% 2% 0 1%;
+  width: 700px;
+  height: 97px;
+  flex-shrink: 0;
+
+  color: var(--normal-hover, #5F2BCF);
+  font-size: 30px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 34px; /* 113.333% */
   }
   
-  .booking-cards {
-    display: flex;
-    flex-direction: column;
-    gap: 20px; /* Space between booking cards */
-    position: absolute;
-    top: 400px;
-    right: 1000px;
-  }
+  //.booking-cards {
+  //  display: flex;
+  //  flex-direction: column;
+  //  gap: 20px; /* Space between booking cards */
+  //  //position: absolute;
+  //  margin: 10% 20%;
+  //  width: 453px;
+  //  height: 30px;
+  //  flex-shrink: 0;
+  //  border-radius: var(--Spacing-sm, 10px);
+  //  border: 1px solid var(--Normal-Normal, #855CDD);
+  //  background: var(--Color, #FFF);
+  //}
   
   .booking-card {
     display: flex;
     align-items: center;
     justify-content: center;
     background-color: #fff; /* White background */
-    border: 2px solid #5F2BCF; /* Purple border */
-    border-radius: 10px; 
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); 
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     padding: 10px;
-    width: 400px; 
     cursor: pointer; /* Make it clickable */
     color: #5F2BCF; /* Text color */
     text-align: center; /* Center the text */
     transition: background-color 0.3s ease; /* Smooth transition on hover */
+    width: 453px;
+    height: 61px;
+    flex-shrink: 0;
+    border-radius: var(--Spacing-sm, 10px);
+    border: 1px solid var(--Normal-Normal, #855CDD);
+    background: var(--Color, #FFF);
+    margin-bottom: 20px;
   }
   
   .booking-card h3 {
