Completed Doctor added

--- a/src/pages/new/new.scss
+++ b/src/pages/new/new.scss
@@ -1,80 +1,101 @@
-.new {
+.newD {
     width: 100%;
     display: flex;
 
-    .newContainer {
+    .newContainerD {
         flex: 6;
 
-        .top,
-        .bottom {
+        .topD {
             -webkit-box-shadow: 2px 4px 10px 1px rgba(0, 0, 0, 0.47);
             box-shadow: 2px 4px 10px 1px rgba(201, 201, 201, 0.47);
             padding: 10px;
             margin: 20px;
             display: flex;
-
+            margin-top: 80px;
+            margin-left: 280px;
             h1 {
-                color: lightgray;
-                font-size: 20px;
-            }
-
-            .left {
-                flex: 1;
-                text-align: center;
-
-                img {
-                    width: 100px;
-                    height: 100px;
-                    border-radius: 50%;
-                    object-fit: cover;
+                    color: lightgray;
+                    font-size: 20px;
                 }
-            }
-
-            .right {
-                flex: 2;
-                padding: 0px 20px;
-
-                form {
-                    display: flex;
-                    flex-wrap: wrap;
-                    gap: 30px;
-                    justify-content: space-between;
-
-                    .formInput {
-                        width: 40%;
-
-                        label {
-                            display: flex;
-                            align-items: center;
-                            gap: 10px;
-
-                            .icon {
-                                cursor: pointer;
-                            }
-                        }
-
-                        input {
-                            width: 100%;
-                            padding: 5px;
-                            border: none;
-                            border-bottom: 1px solid gray;
-                        }
-                    }
-
-                    button {
-                        width: 150px;
-                        padding: 10px;
-                        border: none;
-                        background-color: teal;
-                        color: white;
-                        font-weight: bold;
-                        cursor: pointer;
-                        margin-top: 10px;
-                    }
-                }
-            }
         }
     }
 }
+
+.bottomD {
+    -webkit-box-shadow: 2px 4px 10px 1px rgba(0, 0, 0, 0.47);
+    box-shadow: 2px 4px 10px 1px rgba(201, 201, 201, 0.47);
+    padding: 10px;
+    margin: 20px;
+    display: flex;
+    margin-top: 20px;
+    margin-left: 280px;
+
+
+        h1 {
+            color: lightgray;
+            font-size: 20px;
+        }
+
+        .leftD {
+            flex: 1;
+            text-align: center;
+
+            img {
+                width: 100px;
+                height: 100px;
+                border-radius: 50%;
+                object-fit: cover;
+            }
+        }
+
+        .rightD {
+            flex: 2;
+            padding: 0px 20px;
+
+            form {
+                display: flex;
+                flex-wrap: wrap;
+                gap: 30px;
+                justify-content: space-between;
+
+                .formInputD {
+                    width: 40%;
+
+                    label {
+                        display: flex;
+                        align-items: center;
+                        gap: 10px;
+
+                        .iconD {
+                            cursor: pointer;
+                        }
+                    }
+
+                    input {
+                        width: 100%;
+                        padding: 5px;
+                        border: none;
+                        border-bottom: 1px solid gray;
+                    }
+                }
+
+            }
+        }
+    }
+
+.buttonD {
+    width: 150px;
+    padding: 10px;
+    border: none;
+    background-color: purple;
+    color: white;
+    font-weight: bold;
+    cursor: pointer;
+    margin-top: 10px;
+}
+
+
+
+
 
 //  await axios.post("http://localhost:8800/api/auth/register", newUser);
