--- a/src/pages/home/home1.scss
+++ b/src/pages/home/home1.scss
@@ -12,7 +12,7 @@
 }
 
 .homeContainer2{
-    background-color: rgb(186, 108, 231);
+    background-color: #855CDD;
     display: flex;
         flex: 6;
         margin-top: 50px;
@@ -22,7 +22,7 @@
 }
 
 .homeContainer3 {
-    background-color: rgb(186, 108, 231);
+    background-color: #855CDD;
     display: flex;
     flex: 6;
     margin-top: 50px;
