--- a/src/pages/list/list.css
+++ b/src/pages/list/list.css
@@ -13,7 +13,7 @@
 
 .listSearch{
     flex: 1;
-    background-color: rgb(186, 108, 231);
+    background-color: #855CDD;
     padding: 10px;
     border-radius: 10px;
     position: sticky;
@@ -72,7 +72,7 @@
 .listSearch>button{
     padding: 10px;
     background-color: white;
-    color: rgb(186, 108, 231);
+    color: #855CDD;
     border: none;
     width: 100%;
     font-weight: 500;
