updates to some scss
updates to some scss

--- a/src/pages/medical_history/medical_history.scss
+++ b/src/pages/medical_history/medical_history.scss
@@ -1,9 +1,9 @@
-.appointments {
+.medical_history {
   display: flex;
   height: 100vh;
 }
 
-.appointmentsContainer {
+.medical_historyContainer {
   display: flex;
   flex: 8;
   flex-direction: column;
