--- a/src/pages/Doctor/bookings/bookings.scss
+++ b/src/pages/Doctor/bookings/bookings.scss
@@ -4,7 +4,7 @@
   .navDoc { //homeContainer class is navbar
 
     flex: 2; //used to divide both sidebar and navbar
-    margin-left: 250px; //used to get the space between sidebar and navbar
+    margin-left: 300px; //used to get the space between sidebar and navbar
   }
 }
 
@@ -31,3 +31,11 @@
 .MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiTableContainer-root css-11xur9t-MuiPaper-root-MuiTableContainer-root{
   box-shadow: #EEE7FF;
 }
+
+.css-wa3tca-MuiButtonBase-root-MuiToggleButton-root.Mui-selected:hover {
+  background-color: #855CDD !important;
+}
+
+
+
+
