--- a/src/pages/Doctor/bookings/viewBooking/viewBoking.scss
+++ b/src/pages/Doctor/bookings/viewBooking/viewBoking.scss
@@ -1,15 +1,14 @@
-.appointments {
-  display: flex;
-  height: 100vh;
+.sideDoc {
+  display: flex; //home class is sidebar
+
+  .navDoc { //homeContainer class is navbar
+
+    flex: 2; //used to divide both sidebar and navbar
+    margin-left: 300px; //used to get the space between sidebar and navbar
+  }
 }
 
-.appointmentsContainer {
-  flex: 8;
-  display: flex;
-  flex-direction: column;
-}
-
-.main {
+.mainView {
   color: #000;
   font-size: 25px;
   font-style: normal;
@@ -17,10 +16,10 @@
   line-height: 20px; /* 80% */
   padding-top: 50px;
   max-width: 2000px;
-  margin: 6% 30% 10% 25%;
+  margin: 4% 30% 10% 8%;
 }
 
-.sub {
+.subView {
   color: #000;
   font-size: 18px;
   font-style: normal;
@@ -30,7 +29,7 @@
   max-width: 1000px;
 }
 
-.content {
+.contentView {
   color: #000;
   font-size: 18px;
   font-style: normal;
