--- a/src/pages/appointments/appointments.scss
+++ b/src/pages/appointments/appointments.scss
@@ -8,18 +8,18 @@
   flex: 8;
   flex-direction: column;
 }
-.mainContent{
+.mainContentapp{
   display: grid;
   color: #000;
   font-size: 25px;
   font-style: normal;
   font-weight: 500;
-  line-height: 20px; /* 80% */
+  line-height: 20px;
   padding-top: 10px;
-  max-width: 2000px;
-  margin: 6% 10% 10% 25%;
+  //max-width: 90%;
+  margin: 5% 9% 5% 27%;
 }
-.subContent{
+.subContentapp{
   color: #000;
   font-size: 18px;
   font-style: normal;
@@ -30,9 +30,9 @@
 }
 .buttonsContainer{
   margin-top: 10px;
-  
-  
-  
+
+
+
 }
 .cardsContainer{
   margin-top: 20px;
