--- a/src/pages/medical_history/medical_history.scss
+++ b/src/pages/medical_history/medical_history.scss
@@ -17,7 +17,7 @@
   line-height: 20px; /* 80% */
   padding-top: 10px;
   max-width: 1000px;
-  margin: 6% 20%;
+  margin: 5% 9% 5% 27%;
 }
 .subContent{
   color: #000;
