--- a/src/pages/Doctor/bookings/bookings.scss
+++ b/src/pages/Doctor/bookings/bookings.scss
@@ -31,3 +31,7 @@
 .MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiTableContainer-root css-11xur9t-MuiPaper-root-MuiTableContainer-root{
   box-shadow: #EEE7FF;
 }
+
+.css-wa3tca-MuiButtonBase-root-MuiToggleButton-root.Mui-selected:hover {
+  background-color: #855CDD !important;
+}
