--- a/src/pages/notifications/notifications.scss
+++ b/src/pages/notifications/notifications.scss
@@ -17,7 +17,7 @@
     line-height: 20px; /* 80% */
     padding-top: 10px;
     max-width: 1000px;
-    margin: 6% 20%;
+    margin: 6% 8% 100% 25%;
   }
   .subContent{
     color: #000;
