--- a/src/style/dark.scss
+++ b/src/style/dark.scss
@@ -76,6 +76,33 @@
                 }
             }
     }
+    
+    .SidebarAdm{
+        background-color: #111;
+            border-color: #333;
+        
+            .top {
+                .logo {
+                    color: #999;
+                }
+            }
+        
+            hr {
+                border-color: #333;
+            }
+        
+            ul {
+                li {
+                    &:hover {
+                        background-color: #333;
+                    }
+        
+                    .icon {
+                        color: #999;
+                    }
+                }
+            }
+    }
 
     .datatable {
         .datagrid {
