--- a/src/pages/doctorLU/doctor.css
+++ b/src/pages/doctorLU/doctor.css
@@ -8,11 +8,11 @@
     align-items: center;
     margin-top: 80px;
     flex: 6; 
-    margin-left: 200px;
+    margin-left: 250px;
 }
 
 .hotelfooterLU{
-    background-color: rgb(186, 108, 231);
+    background-color: #855CDD;
     display: flex;
     flex: 6;
     margin-top: 50px;
@@ -35,7 +35,7 @@
     right: 0;
     border: none;
     padding: 10px 20px;
-    background-color: rgb(186, 108, 231);
+    background-color: #855CDD;
     color: white;
     font-weight: bold;
     border-radius: 5px;
@@ -121,7 +121,7 @@
 .hotelDetailsPriceLU>button {
     border: none;
     padding: 10px 20px;
-    background-color: rgb(186, 108, 231);
+    background-color: #855CDD;
     color: white;
     font-weight: bold;
     cursor: pointer;
